Bug 444572 - Cycle Through Desktops - Wrap around option breaks after switching display configuration
Summary: Cycle Through Desktops - Wrap around option breaks after switching display co...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-28 23:08 UTC by Kauê Sena
Modified: 2021-10-29 19:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kauê Sena 2021-10-28 23:08:05 UTC
SUMMARY
Switching display configuration makes the wrap around option of the cycle through desktops feature stop working. One has to uncheck the `Navigation wraps around` option in `Settings>Workspace>Virtual Desktops` and press `Apply`, only to check it again and press `Apply` again in order to get the desired behaviour. 

STEPS TO REPRODUCE
1. Including the current display configuration 2 displays, disable one of them through `Settings>Hardware>Display and Monitor>Display Configuration`.
2. Try and cycle from the first directly to the last virtual desktop.

OBSERVED RESULT

Cycling through desktops does not wrap around. 

EXPECTED RESULT 

Cylcling would be possible directly from the last to the first virtual desktop.

ADDITIONAL INFORMATION

Remark 1:The same happens if I simply remove the HDMI cable or if I use the display management interface triggered by the laptop keyboard key. Also if I change screen edge settings. 

Remark 2: Changing back to the original configuration does not solve the problem. One needs to do the "uncheck-apply-check-apply" process.


SOFTWARE/OS VERSIONS

Linux/KDE Plasma:5.14.14-arch1-1 (64-bit)
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 
Qt Version: 5.15.2
Latte-Dock Version: 0.10.3-1
Comment 1 Michail Vourlakos 2021-10-29 19:50:06 UTC
Git commit e6d7d8262b10a32ded9524d953e44d94f01a2cc2 by Michail Vourlakos.
Committed on 29/10/2021 at 19:48.
Pushed by mvourlakos into branch 'v0.10'.

wm:init vdswraparound value properly

M  +1    -3    app/wm/abstractwindowinterface.cpp

https://invent.kde.org/plasma/latte-dock/commit/e6d7d8262b10a32ded9524d953e44d94f01a2cc2
Comment 2 Michail Vourlakos 2021-10-29 19:50:41 UTC
Git commit 956b58976428e0e740413a037aa1cd9b29b14c84 by Michail Vourlakos.
Committed on 29/10/2021 at 19:50.
Pushed by mvourlakos into branch 'master'.

wm:init vdswraparound value properly

M  +1    -3    app/wm/abstractwindowinterface.cpp

https://invent.kde.org/plasma/latte-dock/commit/956b58976428e0e740413a037aa1cd9b29b14c84