wm:init vdswraparound value properly

BUG:444572